# Tenx-Project-chimera

./: .coderabbit.yaml  .gitignore  AGENT_RULES.md  CONTRIBUTIONS.md  DAY_TWO_SUMMARY.md  Dockerfile  IMPLEMENTATION.md  LOOM_VIDEO_GUIDE.md  Makefile  Project_Chimera_Report.md  README.md  SRS_RESTRUCTURE_SUMMARY.md  day_two_demo.py  debug_logging.py  pyproject.toml  requirements.txt  test_agents.py  verify_db.py  verify_frontend.py  verify_logging.py  verify_logging_subprocess.py
.cursor/: rules
.cursor/rules/: project_rules.md
.github/: copilot-instructions.md
.github/workflows/: main.yml
.qoder/: rules.md
docs/: LOGS.md
project-chimera/: README.md  pyproject.toml
research/: Notes.md  tooling_strategy.md
scripts/: persist_logs.py  spec_checker.py  visualize_logs.py
skills/: README.md
skills/skill_fetch_trends/: README.md
skills/skill_generate_script/: README.md
skills/skill_generate_video/: README.md
skills/skill_publish_content/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
src/: main.py  main_refactored.py
src/agents/: content_agents.py  distribution_agents.py  research_agents.py  safety_agents.py  supervisor_agent.py
src/api/: app.py  dashboard.py  routers.py
src/components/: base_component.py  content_component.py  publishing_component.py  research_component.py
src/config/: logging_config.py  settings.py
src/core/: base_agent.py
src/database/: models.py  (+1 more)
tests/: test_content_integration.py  test_dashboard_api.py  test_skills_interface.py  test_tdd_demonstration.py  test_trend_fetcher.py
(+8 files in other folders)
